doc/0.119/_sources/index.rst.txt
.. _Discord: https://discordapp.com

.. _index:

.. _introduction:

Introduction
============

This document describes the iCAS Sellside API to place ads on iCAS.

The API is designed as a RESTful API supporting JSON as data formats.
Authentication is provided va OAuth2 to allow simple integration with existing
client libraries.

Help / Feedback
===============

If you have questions or would like to provide feedback, you can do so via our
`Discord`_ channel. Please talk to your contact at the tenant to get access, this
is an **invite-only** chat channel. This channel is highly interactive, and contains
several iCAS developers as well so deeper technical support can also be found here.
Notifications about maintenance will also go through this channel.

Contents
========

.. toctree::
   :maxdepth: 2

   overview
   authentication
   ads
   categories
   attributes
   regions
   feeds
   reporting
   error-handling
   api-reference
   deprecation


.. _History:

History
=======

..  role:: strike

* v.0.119 - 24 June 2020 - tw

  * set deprecation date of :ref:`get_ad_v3` to July 15th 2020

* v.0.118 - 10 June 2020 - tw

  * mark :ref:`get_ad_v3` as deprecated, replaced by :ref:`get_ad_v4`

* v.0.117 - 9 June 2020 - tw

  * clean out deprecated methods from manual
  * minor restructure removing redirect layer of categories

* v.0.116 - 15 May 2020 - dr

  * add "statusReason" to ad endpoints

* v.0.115 - 3 Feb 2020 - dr

  * remove "includeDeleted" parameter documentation from :ref:`post_metrics_data`, clarify on filtering for ad statuses

* v.0.114 - 6 Jan 2020 - tw

  * added "includeDeleted" parameter documentation in :ref:`post_metrics_data`

* v.0.113 - 3 Dec 2019 - tw

  * updated :ref:`deprecation_plan` stating /report/* endpoints are deprecated and will be removed by March 1st 2020. These will be replaced by /metrics/* endpoints.

* v.0.112 - 18 Jul 2019 - tw

  * removed `SUSPENDED_BY_SELLERBUDGET` status as this functionality has been removed. We aim to introduce similar functionality at a later stage.

* v.0.111 -17 Jul 2019 - tw

  * added :ref:`get_ad_mapping_externalids` V2 and marked V1 as deprecated

* v.0.110 -5 Jun 2019 - tw

  * update TWH sandbox URLs
  * add regionId as parameter to GET /category/{id}/funnel

* v.0.109 -20 Mar 2019 - dr

  * new reporting API

* v.0.108 -19 Mar 2019 - tw

  * removed references to seller budget

* v.0.107 -11 Mar 2019 - tw

  * made examples in oauth docs consistent w.r.t. grant_type

* v.0.106 -23 Oct 2018 - tw

  * added error documentation for 2035, attribute not writable

* v.0.105 -22 Aug 2018 - tw

  * calling PUT /ad/{id}/status/ACTIVE now allowed when ad has no budget anymore.

* v.0.104 -21 Mar 2018 - tw

  * remove reference to G+ community (deprecated) and explicit help section in landing page.

* v.0.103 -30 Nov 2017 - tw

  * Change usage of **externalId** in :ref:`feeds` to **vendorId**, **externalId** will be replaced by **vendorId** in feeds to be more consistent with the sellside API.

* v.0.102 -29 Nov 2017 - tw

  * add GET /report :ref:`get_report_v3`, v2 is now deprecated.

* v.0.101 -27 Nov 2017 - tw

  * add :ref:`feeds`

* v.0.100 -13 Nov 2017 - tw

  * add :ref:`get_categories_statistics`
  * add scope `reporting`

* v.0.99 -3 Nov 2017 - tw

  * add :ref:`get_ad_ids`

* v.0.98 -25 Oct 2017 - tw

  * add :ref:`get_ad_mapping_externalids`

* v.0.97 -24 Oct 2017 - tw

  * fix typo in TWH oauth endpoints

* v.0.96 -12 Oct 2017 - tw

  * update add TWH endpoints and add warning to region that it's only applicable to Kijiji CA.

* v.0.95 - 5 Oct 2017 - tw

  * update :ref:`get_ad` with more Order By options and other params, and restructure page a bit

* v.0.94 - 29 Sep 2017 - tw

  * add 2dehands sandbox URLs

* v.0.93 - 15 Sep 2017 - ak

  * added `suggestedCpcForPageOne` to the root category of the response to `GET /category/{id}`

* v.0.92 - 13 Sep 2017 - tw

  * add validation for regionId not being modifiable, along with a new error code, see :ref:`error_codes`

* v.0.91 - 18 Jul 2017 - tw

  * make clear that for oauth the redirect_uri is mandatory

* v.0.90 18 May 2017 - ay

  * update kjca urls

* v.0.89 - 6 Apr 2017 - tw

  * added :ref:`get_report_summary_v2`

* v.0.88 - 23 Mar 2017 - tw

  * add some docs for missing error codes, see :ref:`error_codes`

* v.0.87 - 10 Feb 2017 - fs

  * update authentication urls, see :ref:`authentication`

* v0.86 - 9 Jan 2017 - tw

  * add docs for GET /api/sellside/budget/seller

* v0.85 - 2 Sep 2016 - tw

  * add docs for /regions call, see :ref:`get_regions`

* v0.84 - 22 Aug 2016 - tw

  * currencies DKK and CAD also allowed

* v0.83 - 22 Jun 2016 - sd

  * set cpc to mandatory in ads

* v0.82 - 16 Jun 2016 - tw

  * dba.dk sandbox url for sellside api fixed

* v0.81 - 25 May 2016 - tw

  * `api_ro` / `api_rw` also allowed as scopes for report calls

* v0.80 - 18 May 2016 - tw

  * added :ref:`get_feed_xsd`

* v0.79 - 12 May 2016 - tw

  * Corrected the sandbox auth urls for DBA

* v0.78 - 11 May 2016 - tw

  * Clarified SUSPENDED_BY_CS a little in :ref:`ad_status_overview`

* v0.77 - 4 Feb 2016 - ak

  * Added ``id`` field to :ref:`get_user`

* v0.76 - 3 Feb 2016 - ak

  * Added :ref:`get_feed_import`, :ref:`get_feed_import_id_detail` and :ref:`get_feed_import_id_detail_vendor_id`

* v0.75 - 7 Jan 2016 - ak

  * Added vendorId to :ref:`get_report` and :ref:`get_report_detail_id`

* v0.74 - 17 Dec 2015 - gg

  * Improve explanations for shipping options in :ref:`ads`

* v0.73 - 14 Dec 2015 - tw

  * Added Region to the columns of the reports

* v0.72 - 3 Dec 2015 - ak

  * Added vendorId field to :ref:`ads` and :ref:`api_reference`

* v0.71 - 1 Dec 2015 - tw

  * Fix docs for shippingOptions

* v0.70 - 12 Nov 2015 - fs

  * Add :ref:`ad_dailySpent`

* v0.69 - 03 Nov 2015 - fs

  * Add :ref:`get_user`

* v0.68 - 19 Oct 2015 - fs

  * Add ``Accept`` header to :ref:`post_ad` and :ref:`put_ad_id` examples

* v0.67 - 08 Oct 2015 - fs

  * Update ``Accept`` and ``Content-Type`` header documentation for all API calls

* v0.66 - 01 Oct 2015 - tw

  * :ref:`get_categories`: added GET /categories documentation
  * :ref:`get_category_id`: added example to V2 call with content-type
  * :ref:`post_ad`: added category closed and category deleted errors to possible errors
  * :ref:`put_ad_id`: added category deleted error to possible errors

* v0.65 - 24 Sep 2015 - tw

  * :ref:`error_codes`: added 2 new error codes w.r.t. category status

* v0.64 - 24 Aug 2015 - fs

  * :ref:`overview_image_downloads`: Added sandbox external ip address.

* v0.63 - 13 Aug 2015 - gg,tw

  * :ref:`put_ad_id`: Removed erroneous section about 'refresh' attribute on images.
  * :ref:`post_ad` Added 'allowPaypal' documentation.

* v0.62 - 13 Aug 2015 - fs

  * :ref:`categories`: Added missing ``defaults`` field to attributes.

* v0.61 - 02 Jul 2015 - ak

  * :ref:`get_ad`: Removed unused error code "2013 Invalid state"

* v0.60 - 17 Jun 2015 - ak

  * :ref:`get_region_id`: Added error code "2002 Out of range"
  * :ref:`post_ad`: Fixed AdBlocker issue
  * Added maximum allowed value for **price** (``10000000000`` Euro cents)

* v0.59 - 15 Jun 2015 - fs

  * Added :ref:`get_ad_v3`
  * Added :ref:`get_ad_id_v2`
  * Added :ref:`post_ad_v2`
  * Added :ref:`put_ad_id_v2`
  * Added :ref:`deprecation_plan`
  * Deprecated 'GET /ad V2'
  * Deprecated 'GET /ad/{id} V1'
  * Deprecated 'GET /category'
  * Deprecated 'GET /category/{id} V1'
  * Deprecated 'GET /category{id}/attributes V1'
  * Deprecated 'POST /ad V1'
  * Deprecated 'PUT /ad V1'
  * Moved all deprecations to after September 2015

* v0.58 - 15 Jun 2015 - fs

  * Updated docs for :ref:`scopes`
  * Moved all deprecation dates to 'after September 2015'

* v0.57 - 10 Jun 2015 - fs

  * Fixed documentation for data type for ad id from ``int`` to ``long``

* v0.56 - 5 Jun 2015 - tw

  * Added :ref:`get_report_summary`
  * Corrected accepted image types to be JPG, GIF, PNG, BMP
  * Added startDate and endDate to /ad call

* v0.55 - 1 Jun 2015 - be

  * Updated the documentation about regions

* v0.54 - 29 May 2015 - be,fs

  * Added documentation for :ref:`categories` V2
  * Renamed Admarkt to iCAS
  * Replaced support email address with link to Google Plus Community
  * Added links for DBA and Kijiji Canada
  * Added `priceUnit` to ad object
  * Added `priceUnits` to category configuration

* v0.53 - 18 May 2015 - ak

  * :ref:`post_ad` and :ref:`put_ad_id`: Error code for invalid ad title or description length is changed from "2005 Too long" to "2002 Out of range"

* v0.52 - 13 May 2015 - fs

  * Fixed the content type header for OAuth2 requests to `application/x-www-form-urlencoded`

* v0.51 - 22 Apr 2015 - be

  * Corrected the documentation about image links

* v0.50 - 17 Apr 2015 - be

  * Added documentation for detail report. :ref:`get_report_detail`, :ref:`get_report_detail_id` and :ref:`post_report_detail`

* v0.49 - 13 Apr 2015 - ak

  * :ref:`ads`: Added information about deprecated :strike:`buyItNowEnabled` and :strike:`paypalEmail` ad fields

* v0.48 - 13 Apr 2015 - ak

  * Added support for feed configuration via :ref:`get_feed_config` and :ref:`post_feed_config`

* v0.47 - 3 Apr 2015 - ak

  * :ref:`post_ad` and :ref:`put_ad_id`: Removed deprecated :strike:`Buy It Now` error codes
  * :ref:`post_ad` and :ref:`put_ad_id`: Added budget error codes

* v0.46 - 04 Mar 2015 - fs

  * Added :ref:`overview_image_downloads` with proxy ips, ``ETag`` and ``Last-Modified`` headers

* v0.45 - 25 Feb 2015 - ak

  * Added performance predictions via :ref:`get_ad_id_funnel` and :ref:`get_category_id_funnel`

* v0.44 - 24 Feb 2015 - fs

  * Pushed deadline for removal of 'GET /ad V1' of :ref:`get_ad` from 1 Mar 2015 to 1 May 2015
  * Pushed deadline for removal of :ref:`get_report_v1` of :ref:`get_report` from 1 Mar 2015 to 1 May 2015

* v0.43 - 13 Jan 2015 - ak

  * Added :ref:`scopes` section and scopes to all resources
  * :ref:`get_ad` and :ref:`get_report`: from ``Content-Type`` to ``Access``
  * :ref:`expiration_times`: removed duplicate paragraph

* v0.42 - 12 Dec 2014 - ak

  * Added :ref:`get_report_v2` of :ref:`get_report` which adds support for date ranges
  * Clarified download strategy for :ref:`ad_image_objects`
  * Removed references to `buyItNowEnabled`

* v0.41 - 26 Nov 2014 - ak

  * Added support for image upload via :ref:`post_image` and :ref:`get_image`

* v0.40 - 25 Nov 2014 - fs

  * :ref:`authentication`: Added HTTP examples and added a section on :ref:`using_an_access_token`

* v0.39 - 20 Nov 2014 - ak

  * Added 'GET /ad V2' of :ref:`get_ad` which includes the size of the result set

* v0.38 - 03 Nov 2014 - ak

  * Removed deprecated :strike:`DELETE /ad/{id}`

* v0.37 - 31 Oct 2014 - ak

  * Added support for :ref:`dryrun_validation` for :ref:`post_ad`, :ref:`put_ad_id` and :ref:`put_ad_id_status`

* v0.36 - 13 Oct 2014 - ak

  * :ref:`get_ad`: Added *remainingBudget* parameter for retrieving ads whose budget is below a certain threshold.

* v0.35 - 30 Sep 2014 - ak

  * Added error code *2017 - ad status change not allowed*

* v0.34 - 23 Sep 2014 - fs

  * Fixed Content-Type header in :ref:`post_ad` and :ref:`put_ad_id` examples

* v0.33 - 10 Sep 2014 - tw, fs

  * :ref:`get_report` fields `cpc`, `dailyBudget`, `totalSpent` and `totalBudget` were factor 10 too high
  * Updated sandbox api and authentication endpoints

* v0.32 - 08 Aug 2014 - fs

  * Enhanced Overview section
  * Updated production authentication endpoint

* v0.31 - 01 Aug 2014 - fs

  * Added *client_secret* as required parameter to token request

* v0.30 - 28 apr 2014 - fs

  * Added note to exclude :ref:`ad_pageNumber` and :ref:`ad_suggestedCpcForPageOne` if they are not required
  * Added note on how to reset the :ref:`ad_dailyBudget`
  * Added note that by default :ref:`get_ad` returns only active ads
  * Fixed typos and links in documentation

* v0.29 - 15 apr 2014 - tw

  * Deprecated :strike:`DELETE /ad/{id}`. Set status to :ref:`ad_status_deleted` with :ref:`put_ad_id_status` before **1 Sep 2014**
  * Added section :ref:`overview_customize_response_body` to :ref:`overview`
  * Added support for `_body` to

  * :ref:`post_ad`
  * :ref:`put_ad_id`

  * Added support for `_include` and `_exclude` to

  * :ref:`get_ad`
  * :ref:`get_ad_id`
  * 'GET /category'
  * :ref:`get_category_id`
  * 'GET /category/{id}/attributes'
  * :ref:`get_report`
  * :ref:`post_ad`
  * :ref:`put_ad_id`

* v0.28 - 27 mar 2014 - fs

  * :ref:`put_ad_id_status`: Fixed documentation

* v0.27 - 11 mar 2014 - be

  * Added :strike:`buyItNowEnabled` to Ad
  * Added :strike:`paypalEmail` to Ad
  * Added documentation for :strike:`Buy It Now`

* v0.26 - 08 feb 2014 - fs

  * Updated Sandbox URLs
  * Added note on self-signed certificates
  * Added section on token expiration times and policies
  * Removed "refresh" flag for image upload since it isn't implemented yet
  * Moved report documentation into the API reference
  * Removed "/sellside/" from all URLs since base URL may vry
  * Updated to readthedocs.org theme to work better on mobile devices
  * Added note that /report returns only statistics for ads which received at least one event
  * Updated contact email address to Admarkt-API@marktplaats.nl

* v0.25 - 30 jan 2014 - be

  * Added :ref:`get_report`

* v0.24 - 02 dec 2013 - be

  * Removed unused error code *2013 - invalid state*

* v0.23 - 30 oct 2013 - be

  * Added documentation for :ref:`authentication`
  * Updated documentation for :ref:`ad_shippingOptions`

* v0.22 - 24 oct 2013 - be

  * Added :ref:`ad_shippingOptions` to Ad
  * Changed maxLength of :ref:`ad_description` from 1000 to 20000

* v0.21 - 05 jun 2013 - be

  * Added :ref:`ad_pageNumber` to Ad
  * Added :ref:`ad_suggestedCpcForPageOne` to Ad
  * Added *suggestedCpcForPageOne* to Category

* v0.20 - 01 may 2013 - fs

  * Fixed the category attribute examples to use the correct types (STRING, LIST, NUMBER)

* v0.19 - 08 apr 2013 - be

  * Updated status filter part of :ref:`get_ad`
  * Updated :ref:`put_ad_id_example` for :ref:`put_ad_id`
  * Updated the documentation about :ref:`ad_dailyBudget` and :ref:`ad_totalBudget` fields

* v0.18 - 27 mar 2013 - fs

  * :ref:`get_ad`: Added *changedSince* parameter for retrieving updated ads
  * :ref:`get_ad`: Describe procedure for fetching and maintaining a cache of the ads
  * Added error code *2013 - invalid state*

* v0.17 - 6 mar 2013 - fs

  * :ref:`post_ad`, :ref:`put_ad_id`: Return *1006 - Type mismatch* if the value for an integer field is a string or a float (:ref:`ad_id`, :ref:`ad_categoryId`, :ref:`ad_cpc`, :ref:`ad_dailyBudget`, :ref:`ad_totalBudget`, :ref:`ad_price`)

* v0.16 - 26 feb 2013 - be, tw

  * Added description for the caller to add the accept header *application/json* to be able to receive a 401 token expired / invalid error instead of a 406 NOT ACCEPTED.

* v0.15 - 25 feb 2013 - be, tw

  * Updated documentation according to the refactoring of attributes

* v0.14 - 21 feb 2013 - tw

  * Made :ref:`ad_totalBudget` optional again, leaving it empty will mean unlimited budget.
  * Corrected a typo from dailyLimit to :ref:`ad_dailyBudget`

* v0.13 - 18 Oct 2012 - tw

  * Added some explanation on user defined attributes & validation
  * Added error codes for put & post w.r.t. user defined attributes

* v0.12 - 12 Oct 2012 - be

  * Added a new error code to :ref:`get_category_id`

* v0.11 - 10 Oct 2012 - tw

  * :ref:`put_ad_id`: different error code is thrown when supplied with a non-numeric id
  * :strike:`DELETE /ad/{id}`: negative id will use error for out of range instead of invalid id
  * Added error code 2012 to the list of existing error codes and to the error list of :ref:`put_ad_id`
  * Changed titleKeyword to titleKeywords since we allow multiple values, comma separated.

* v0.10 - 8 Oct 2012 - fs, ml

  * 'GET /category/{id}/attributes': only leaf categories have attributes
  * Added additional user attribute examples
  * Changed *valueType* for *MULTI* category attribute example
  * Changed *name* to *key* in user attribute example

* v0.9 - 5 Oct 2012 - fs

  * Removed dateCreated from image objects

* v0.8 - 4 Oct 2012 - fs

  * Added a section for attributes
  * Added 'GET /category/{id}/attributes'
  * Removed the *media* attribute from ads
  * Updated the handling of images in ads
  * :ref:`post_ad`: Removed all *media* related errors
  * :ref:`post_ad`: Added *image* related errors 2002 and 2006
  * :ref:`put_ad_id`: Updated handling of images

* v0.7 - 1 Oct 2012 - tw

  * :ref:`get_ad`: Added sorting
  * :ref:`get_ad`: Added status filtering
  * :ref:`get_ad`: Updated response documentation

* v0.6 - 27 Sep 2012 - fs

  * Removed XML as supported format

* v0.5 - 24 Sep 2012 - fs, ml

  * Added constraint and error specification for price greater than zero in POST
  * Added link to ISO 4217 currency code to the category
  * Added :ref:`ad_postcode` attribute to ad
  * Added status attribute to ad
  * Changed: :ref:`ad_postcode` is optional
  * Changed date format to ISO 8601
  * Updated description of the :ref:`ad_externalId` field for an ad

* v0.4 - 13 Sep 2012 - fs

  * Added :ref:`ad_currency` attribute to ad
  * Added currency attribute to category
  * Added canPlaceAds to the category
  * Added minDailyBudget to the category
  * Added maxNumberOfActiveAds to the category
  * Moved the category examples to the category page
  * :ref:`post_ad`: Added comment on the maxNumberOfActiveAds for the category
  * :ref:`post_ad`: Made :ref:`ad_cpc` and :ref:`ad_totalBudget` mandatory fields
  * :ref:`post_ad`: Removed media - 2009 error for image dimension check
  * :ref:`post_ad`: Changed :ref:`ad_sellerName` - 2004 error to sellerName - 2000 since it is a mandatory field

* v0.3 - 11 Sep 2012 - fs

  * Added description for :ref:`price_types`
  * Removed /pricetype links

* v0.2 - 11 Sep 2012 - fs

  * Added :ref:`ad_dateCreated`
  * Added :ref:`ad_dateLastUpdated`
  * Added :ref:`ad_dateDeleted`
  * Added :ref:`ad_spentBudget`
  * Added :ref:`price_types`
  * Added :ref:`ad_status_overview`
  * Updated :ref:`error_codes`
  * Updated :ref:`ads`
  * Updated :ref:`categories`
  * Updated :ref:`attributes`

* v0.1 - 15 Jun 2012 - bk, fs

  * Initial draft


Indices and tables
==================

* :ref:`genindex`
* :ref:`search`

